<resources>
    <string name="app_name">school</string>
    <string name="already_account">"  LOGIN"</string>
    <string name="new_user">REGISTER</string>
    <string name="schoolname">School Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_your_password">FORGOT PASSWORD</string>
    <string name="not_create_account_yet">Don\'t have an account?</string>
    <string name="click_here">Click Here</string>
    <string name="enter_firest_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_id">Enter Id</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_registered">Already have an account?</string>
    <string name="are_you_student">Are You Student</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_teacher">teacherActivity</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_student_activity">student_activity</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="read_college_notice">College Notice</string>
    <string name="read_class_notice">Class Notice</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="notice_title">Enter Title</string>
    <string name="post">POST</string>
    <string name="enter_notice_text">Enter Text...</string>
    <string name="notification">Notification</string>
    <string name="mine_notices">My Notices</string>
    <string name="enter_class">Enter class (example Nur,Ukg ,1,2..)</string>
    <string name="subject">Subject</string>
    <string name="fullmarks">F.M.</string>
    <string name="pass_marks">P.M.</string>
    <string name="obtain_marks">O.M.</string>
    <string name="remarks">Remarks</string>
    <string name="get_result">Get Result</string>
    <string name="sign_out">Sign Out</string>
    <string name="result">Result</string>
    <string name="fee">Fee</string>
    <string name="grade">Grade</string>
    <string name="textview">TextView</string>
    <string name="selectdate">Select Date</string>
    <string name="add_attendance">Add Attendance</string>
    <string name="attendance">Attendance</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
</resources>
